--- a/MedTime/AndroidManifest.xml
+++ b/MedTime/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".LogIn"
-            android:label="@string/title_activity_log_in" 
-            android:screenOrientation= "landscape">"
+            android:label="@string/title_activity_log_in"
+            android:screenOrientation="landscape" >
+"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,18 +26,22 @@
         </activity>
         <activity
             android:name=".Welcome"
-            android:label="@string/title_activity_welcome" 
-            android:screenOrientation= "landscape">
+            android:label="@string/title_activity_welcome"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name=".Pacienti"
             android:label="@string/title_activity_pacienti"
-            android:screenOrientation= "landscape" >
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name=".Consultatii"
-            android:label="@string/title_activity_consultatii" 
-            android:screenOrientation= "landscape">
+            android:label="@string/title_activity_consultatii"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".DisplayPacientInfo"
+            android:label="@string/title_activity_display_pacient_info" >
         </activity>
     </application>
 
